@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Exception_class now an obj attribute defaulting to class attribute
+
 0.6.286  2011-07-11
          - Changed F::DC API. Made ioc_obj an attribute not a parameter
          - More breakage in IO::tempfile. Set mode to w+ and fix open_args
